# Discord-Sky-Whale-Bot

./: .gitignore  Dockerfile  Music.py  Pipfile  README.md  conf.example.json  conf.json  db.py  docker-compose.yml  main.py  pyproject.toml  req.txt  run.sh  setting.example.py  setting.py  whale.py
Cogs/: Core.py  Music.py  Playlist.py
Cogs/MusicComponents/: playlist.py  playlist_embed.py  song.py  youtube.py
Modules/Music/components/: playlist.py  queue.py  song.py  youtube.py
Modules/Music/utils/: components.py  embeds.py
src/: db.py  extended_bot.py  whale.py
src/cogs/: admin_cog.py  music_cog.py
src/cogs/music/: command.py  music.py  service.py  view.py
src/cogs/music/components/: __init__.py  player.py  song.py  youtube.py
src/cogs/music/view/: __init__.py  help.py  playlist.py  youtube.py
src/cogs/util/: util.py
src/cogs/util/view/: __init__.py  suggestion.py
src/components/: music.py  player.py  playlist.py  search.py  song.py
src/db/: db.py  music_channel.py
src/embeds/: base_embed.py  help.py
src/exception/: __init__.py
src/model/: music_channel.py
src/playlist/: embed.py  player.py  song.py  youtube.py
src/tools/: __init__.py  env.py  log.py
src/util/: function.py  log.py
src/utils/: components.py  myLogger.py  queue.py
temp/: Playlist.py
